--- a/Mask/packages.config
+++ b/Mask/packages.config
@@ -5,4 +5,5 @@
   <package id="SharpDX" version="4.2.0" targetFramework="net472" />
   <package id="SharpDX.Direct2D1" version="4.2.0" targetFramework="net472" />
   <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net472" />
+  <package id="ZXing.Net" version="0.16.6" targetFramework="net472" />
 </packages>
